- 7th Dec 2023 bug fixes and enhancements: * For Groups that use local walks population only:   * Ensure latest Assemble short name copied across to walk when old pre-migration walk is used as a copy source   * Provide clear alert to walk leaders and walk admins that a walk is non-published   * Risk assessment must now be complete before walk can be approved   * Allowed Mileage rate to be updatable value within [Committee Settings](/admin/committee-settings) rather than using prior hard-coded value of 28p/mile

--- a/projects/ngx-ramblers/src/app/pages/admin/member-admin-modal/member-admin-modal.component.html
+++ b/projects/ngx-ramblers/src/app/pages/admin/member-admin-modal/member-admin-modal.component.html
@@ -396,10 +396,10 @@
           </div>
           <div class="row">
             <div class="col col-sm-6">
-              <label for="contact-id">Ramblers Assemble Name</label>
+              <label for="ramblers-assemble-name">Ramblers Assemble Name</label>
               <div class="input-group">
                 <input autocomplete="new-password" name="contactId" [(ngModel)]="member.contactId" type="text"
-                       class="form-control input-sm" id="contact-id"
+                       class="form-control input-sm" id="ramblers-assemble-name"
                        placeholder="The first name and last name used in Ramblers Assemble System">
                 <div class="input-group-append" tooltip="Set this field to be {{member | fullNameWithAlias}}">
                   <div class="input-group-text pointer" (click)="defaultAssembleName()">
