--- a/projects/ngx-ramblers/src/app/pages/walks/walk-list/walk-list.component.html
+++ b/projects/ngx-ramblers/src/app/pages/walks/walk-list/walk-list.component.html
@@ -20,7 +20,7 @@
                class="rounded table styled-table table-striped table-hover table-sm">
           <thead *ngIf="showTableHeader(displayedWalk)" class="styled-table">
           <tr>
-            <th *ngIf="memberLoginService.memberLoggedIn()" width="7%">Action</th>
+            <th class="action" *ngIf="display.walkPopulationLocal() && memberLoginService.memberLoggedIn()" width="7%">Action</th>
             <th width="13%">Walk Date</th>
             <th class="d-none d-lg-table-cell" width="7%">Start Time</th>
             <th width="32%">Walk Title</th>
@@ -32,47 +32,40 @@
           </thead>
           <tbody>
           <tr [ngClass]="tableRowEven(displayedWalk)? 'default': 'active'">
-            <td *ngIf="memberLoginService.memberLoggedIn()" width="7%" id="walkAction-{{index}}"
-                class="nowrap"><input
+            <td *ngIf="display.walkPopulationLocal() && memberLoginService.memberLoggedIn()" id="walkAction-{{index}}"
+                class="nowrap action"><input
               *ngIf="displayedWalk?.walkAccessMode?.walkWritable" type="submit"
               value="{{displayedWalk?.walkAccessMode?.caption}}"
               (click)="display.edit(displayedWalk)"
               class="button-form">
             </td>
-            <td width="13%" (click)="display.view(displayedWalk.walk)"
-                id="walkDate-{{index}}" class="nowrap">
-                          <span [textContent]="displayedWalk.walk.walkDate|displayDate"
-                                name="walkDate"></span></td>
-            <td class="d-none d-lg-table-cell" width="7%" (click)="display.view(displayedWalk.walk)"
-                id="startTime-{{index}}">
-                          <span [textContent]="viewWalkField(displayedWalk, 'startTime')"
-                                name="startTime"></span>
-            </td>
-            <td width="32%" (click)="display.view(displayedWalk.walk)" name="briefDescriptionAndStartPoint"
-                id="briefDescription-{{index}}"
-                [textContent]="viewWalkField(displayedWalk, 'briefDescriptionAndStartPoint')"></td>
-            <td class="d-none d-lg-table-cell" width="7%" (click)="display.view(displayedWalk.walk)"
+            <td width="13%" (click)="display.view(displayedWalk.walk)" id="walkDate-{{index}}" class="nowrap walk-date">
+              {{displayedWalk.walk.walkDate|displayDate}}</td>
+            <td width="7%" class="d-none d-lg-table-cell start-time" name="startTime" (click)="display.view(displayedWalk.walk)"
+                id="startTime-{{index}}">{{viewWalkField(displayedWalk, 'startTime')}}</td>
+            <td width="32%" name="briefDescriptionAndStartPoint"
+                (click)="display.view(displayedWalk.walk)"
+                id="briefDescription-{{index}}">{{viewWalkField(displayedWalk, 'briefDescriptionAndStartPoint')}}</td>
+            <td width="7%" class="d-none d-lg-table-cell distance" (click)="display.view(displayedWalk.walk)"
                 id="distance-{{index}}"
-                [textContent]="viewWalkField(displayedWalk, 'distance')" name="distance"></td>
-            <td class="d-none d-lg-table-cell" width="8%" id="postcode-{{index}}">
+                name="distance">{{viewWalkField(displayedWalk, 'distance')}}</td>
+            <td width="8%" class="d-none d-lg-table-cell postcode" id="postcode-{{index}}">
               <a [href]="'http://maps.google.co.uk/maps?q=' + viewWalkField(displayedWalk, 'postcode')"
-                 target="_blank" [textContent]="viewWalkField(displayedWalk, 'postcode')"
-                 name="postcode"
+                 target="_blank" name="postcode"
                  tooltip="Click to locate postcode {{viewWalkField(displayedWalk, 'postcode')}} on Google Maps"
-                 placement="left"></a></td>
-            <td class="d-none d-lg-table-cell" width="12%" id="contactEmail-{{index}}">
+                 placement="left">{{viewWalkField(displayedWalk, 'postcode')}}</a></td>
+            <td width="12%" class="d-none d-lg-table-cell postcode" id="contactEmail-{{index}}">
               <a *ngIf="allowDetailView()" [href]="'mailto:'+ displayedWalk.walk.contactEmail"
-                 [textContent]="displayedWalk.walk.displayName"
                  name="displayName"
                  tooltip="Click to email {{displayedWalk.walk.displayName}} at {{displayedWalk.walk.contactEmail}}"
-                 placement="left"></a>
+                 placement="left">{{displayedWalk.walk.displayName}}</a>
               <span class="tooltip-link" *ngIf="!allowDetailView()" placement="left"
-                    (click)="login()" tooltip="Click to login as an {{group?.shortName}} member and send an email to {{displayedWalk.walk.displayName}}">
+                    (click)="login()"
+                    tooltip="Click to login as an {{group?.shortName}} member and send an email to {{displayedWalk.walk.displayName}}">
                 {{displayedWalk.walk.displayName}}</span></td>
-            <td class="d-none d-lg-table-cell" width="11%" id="contactPhone-{{index}}">
+            <td width="11%" class="d-none d-lg-table-cell contact-phone" id="contactPhone-{{index}}" name="contactPhone">
               <a *ngIf="allowDetailView()" [href]="'tel:' + displayedWalk.walk.contactPhone"
                  [textContent]="viewWalkField(displayedWalk, 'contactPhone')"
-                 name="contactPhone"
                  tooltip="Click to ring {{displayedWalk.walk.displayName}} on {{viewWalkField(displayedWalk, 'contactPhone')}} (mobile devices only)"
                  placement="left"></a>
               <a *ngIf="!allowDetailView()" [href]="'tel:' + displayedWalk.walk.contactPhone">
