- 12th Dec 2023 Committee fixes and enhancements: - Fixed loading of committee-years and action-buttons on committee page - Changed action button navigation to avoid reloading page if linking to internal page on site - Removed /year Changed paths on prior committee years

--- a/projects/ngx-ramblers/src/app/pages/committee/home/committee-home.component.html
+++ b/projects/ngx-ramblers/src/app/pages/committee/home/committee-home.component.html
@@ -1,6 +1,7 @@
-<app-page [pageTitle]="'Committee'">
-  <app-committee-year [committeeYear]="committeeYear"  [notify]="notify"></app-committee-year>
-  <app-dynamic-content [anchor]="'action-buttons'" [contentPathReadOnly]="true"></app-dynamic-content>
+<app-page [pageTitle]="pageTitle">
+  <app-committee-year [committeeYear]="committeeYear" [notify]="notify"></app-committee-year>
+  <app-dynamic-content [anchor]="'committee-years'" areaAsContentPath contentPathReadOnly></app-dynamic-content>
+  <app-dynamic-content [anchor]="'action-buttons'" areaAsContentPath contentPathReadOnly></app-dynamic-content>
   <div class="row">
     <div class="col-sm-12">
       <div *ngIf="showAlertMessage()" class="row">
