--- a/projects/ngx-ramblers/src/app/modules/common/card-editor/card-editor.html
+++ b/projects/ngx-ramblers/src/app/modules/common/card-editor/card-editor.html
@@ -7,7 +7,10 @@
     [imageLink]="column.href"></app-card-image>
   <div class="card-body">
     <h4 class="card-title">
-      <a class="rams-text-decoration-pink" [href]="column.href"
+      <a *ngIf="routerLink" class="rams-text-decoration-pink"
+         [routerLink]="routerLink"
+         target="_self">{{column.title}}</a>
+      <a *ngIf="!routerLink" class="rams-text-decoration-pink" [href]="column.href"
          target="_self">{{column.title}}</a>
     </h4>
     <app-image-cropper-and-resizer
