- added missing login/logout and site edit buttons from mobile view - allow login button to be clicked automatically if member presses enter after entering username or password - expand/collapse icon rendered correctly based on whether menu is expanded or not

--- a/projects/ngx-ramblers/src/app/header-buttons/header-buttons.html
+++ b/projects/ngx-ramblers/src/app/header-buttons/header-buttons.html
@@ -1,11 +1,9 @@
-<div class="text-center text-sm-right d-block d-sm-flex" data-v-346f2b12="">
-  <button (click)="urlService.navigateToUrl(site.href,$event);" type="button"
-          class="btn mx-auto mb-3 mb-sm-0 mr-sm-3 d-block d-sm-inline-block btn-primary text-black"
-          *ngFor="let site of systemConfigResponse?.header?.navigationButtons">
-    {{site.title}}
-  </button>
+<div class="d-block d-lg-none d-sm-flex align-items-center col-md-4">
+  <app-login-panel></app-login-panel>
 </div>
-
-
-
-
+  <div class="text-center text-sm-right d-block d-sm-flex">
+    <a [href]="site.href"
+       class="mx-auto btn btn-primary text-black mb-3 mb-sm-0 mr-sm-3 d-block d-sm-inline-block"
+            *ngFor="let site of systemConfigResponse?.header?.navigationButtons">
+      {{site.title}}</a>
+  </div>
