--- a/projects/ngx-ramblers/src/app/header-bar/header-bar.html
+++ b/projects/ngx-ramblers/src/app/header-bar/header-bar.html
@@ -2,10 +2,11 @@
   <div class="px-0 bg-dark col">
     <div class="container">
       <div class="row p-2">
-        <div class="d-block d-sm-flex  align-items-center  justify-content-center justify-content-lg-end  col-md-4">
+        <div class="d-block d-sm-flex align-items-center col-md-4">
           <app-login-panel></app-login-panel>
         </div>
-        <div class="d-block d-sm-flex  align-items-center  justify-content-center justify-content-lg-end  col-md-8 order-sm-3 col-12 order-3">
+        <div
+          class="d-block d-sm-flex align-items-center justify-content-center justify-content-lg-end col-md-8 order-sm-3 col-12 order-3">
           <app-header-buttons></app-header-buttons>
         </div>
       </div>
